# word-guessing-game-api

./: .dockerignore  Cargo.toml  Dockerfile  README.md  server-ft.yml
.github/workflows/: server.yml
crates/api_test_client/: Cargo.toml
crates/api_test_client/src/: api_error.rs  api_response.rs  client.rs  guess_validation.rs  lib.rs
crates/api_test_client/src/response/: error_response.rs  guess_validation_response.rs  latest_challenge_response.rs  mod.rs  response_body.rs
scripts/: server_autoreload.sh
src/: application.rs  lib.rs  main.rs
src/cli/: mod.rs  opts.rs
src/config/: application_config.rs  challenge_config.rs  config_reader.rs  config_validator.rs  error.rs  mod.rs  server_config.rs
src/domain/: answer_repository.rs  guess_validator.rs  mod.rs  validated_guess.rs
src/http/: axum_server.rs  latest_challenge.rs  mod.rs  status.rs  validate.rs
src/http/response_body/: guess_validation_response.rs  latest_challenge_response.rs  mod.rs
tests/api/: latest_challenge.rs  main.rs  status.rs  validate.rs
tests/api/helpers/: assertions.rs  context.rs  mod.rs
tests/e2e/: main.rs
tests/e2e/config/: invalid_answers.rs  missing_config_file.rs  missing_mandatory_properties.rs  mod.rs
tests/e2e/helpers/: config_builder.rs  context.rs  mod.rs
tests/e2e/helpers/config_builder/: application.rs  challenges.rs  mod.rs  server.rs
