[package]
name = "word-guessing-game-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
clap = { version = "3.0", features = ["derive"] }
config = "0.11"
derive-getters = "0.2"
derive-new = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.2.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
api_test_client = { path = "crates/api_test_client" }
assert_fs = "1.0"
serde_yaml = "0.8"
speculoos = "0.8"

[workspace]
members = ["./crates/*"]